Overlapping in small widescreen fixed

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -54,8 +54,8 @@ section {
 }
 
 .splash {
-  height: 40vh;
-  margin-top: 100px;
+  min-height: 45vh;
+  margin-top: 20%;
   background-position: top center;
   background-image: url("../images/1background-splash.jpg");
 }
